@@ -1,3 +1,7 @@
+2001-11-09  Bradford Hovinen  <hovinen@ximian.com>
+
+	* archive.c (archive_destroy): Don't traverse the tree
+
 2001-11-02  Bradford Hovinen  <hovinen@ximian.com>
 
 	* bonobo-config-archiver.c (bonobo_config_archiver_destroy): Keep
